--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Images</title>
+    <link rel="stylesheet" href="styles/styles.css"> 
 </head>
 <body>
     <h1>My Image Gallery</h1>
